examples/typechecking/impredicativity.an

id x = x

ids = [freeze id]

auto (x: forall a. fn a -> a) = x (freeze x)

auto_prime (x: forall a. fn a -> a) = x x

f5 = auto (freeze id)

// bad f =
//     f 42, f true  // error expected

poly (f: forall a. fn a -> a) =
    f 42, f true

f9 =
    f = revapp (freeze id)
    f poly

choose (x: a) (y: a) = x

a5 = id auto
a6 = id auto_prime
a6_ = id (freeze auto_prime)

a7 = choose id auto
// a8 = choose id auto_prime // error expected

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (id: fn _ -> _ pure) (x: _) = (x: _)
// 
// (ids: _) = (error)
// 
// (auto: fn (error) -> _ pure) ((x: (error))) = (x: (error)) (error)
// 
// (auto_prime: fn (error) -> _ pure) ((x: (error))) = (x: (error)) (x: (error))
// 
// (f5: _) = (auto: fn (error) -> _ pure) (error)
// 
// (poly: fn (error) -> _, _ pure) ((f: (error))) =
//     (f: (error)) 42 (,: fn _ _ -> _, _ pure) (f: (error)) true
// 
// (f9: _) =
//     (f: fn (fn (error) -> _, _ pure) [_] -> _ pure) = (revapp: (error)) (error)
//     (f: fn (fn (error) -> _, _ pure) [_] -> _ pure) (poly: fn (error) -> _, _ pure)
// 
// (choose: fn a a -> a pure) ((x: a)) ((y: a)) = (x: a)
// 
// (a5: fn (error) -> _ pure) = (id: fn (fn (error) -> _ pure) -> fn (error) -> _ pure pure) (auto: fn (error) -> _ pure)
// 
// (a6: fn (error) -> _ pure) = (id: fn (fn (error) -> _ pure) -> fn (error) -> _ pure pure) (auto_prime: fn (error) -> _ pure)
// 
// (a6_: _) = (id: fn _ -> _ pure) (error)
// 
// (a7: fn (error) -> (error) pure) = (choose: fn (fn (error) -> (error) pure) (fn (error) -> (error) pure) -> fn (error) -> (error) pure pure) (id: fn (error) -> (error) pure) (auto: fn (error) -> (error) pure)

// expected stderr:
// examples/typechecking/impredicativity.an:4:7
// 4 | ids = [freeze id]	// error: Expected an expression but found `[`
//   |       ^
// 
// examples/typechecking/impredicativity.an:6:10
// 6 | auto (x: forall a. fn a -> a) = x (freeze x)	// error: Expected a type but found `forall`
//   |          ^^^^^^
// 
// examples/typechecking/impredicativity.an:6:36
//   | // error: Expected an expression but found `freeze`
// 6 | auto (x: forall a. fn a -> a) = x (freeze x)
//   |                                    ^^^^^^
// 
// examples/typechecking/impredicativity.an:8:16
//  8 | auto_prime (x: forall a. fn a -> a) = x x	// error: Expected a type but found `forall`
//    |                ^^^^^^
// 
// examples/typechecking/impredicativity.an:10:12
// 10 | f5 = auto (freeze id)	// error: Expected an expression but found `freeze`
//    |            ^^^^^^
// 
// examples/typechecking/impredicativity.an:15:10
// 15 | poly (f: forall a. fn a -> a) =	// error: Expected a type but found `forall`
//    |          ^^^^^^
// 16 |     f 42, f true
// 
// examples/typechecking/impredicativity.an:19:9
// 18 | f9 =
// 19 |     f = revapp (freeze id)	// error: `revapp` not found in scope
//    |         ^^^^^^
// 20 |     f poly
// 
// examples/typechecking/impredicativity.an:19:17
// 18 | f9 =
// 19 |     f = revapp (freeze id)	// error: Expected an expression but found `freeze`
//    |                 ^^^^^^
// 20 |     f poly
// 
// examples/typechecking/impredicativity.an:26:11
// 25 | a6 = id auto_prime
// 26 | a6_ = id (freeze auto_prime)	// error: Expected an expression but found `freeze`
//    |           ^^^^^^
// 
// Found 9 errors and 0 warnings

